--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -1,3 +1,36 @@
+@font-face {
+  font-family: "instrumentRegular";
+  src: url("../../../public/assets/fonts/InstrumentSerif-Regular.ttf");
+}
+
+@font-face {
+  font-family: "instrumentItalic";
+  src: url("../../../public/assets/fonts/InstrumentSerif-Italic.ttf");
+}
+
 .Home {
   text-align: center;
+
+  .introducao {
+
+    margin-bottom: 5vh;
+
+    h1 {
+      font-family: "instrumentRegular";
+      font-size: 3rem;
+      font-weight: 500;
+    }
+
+    h2 {
+      font-family: "instrumentItalic";
+      font-size: 2.5rem;
+      font-weight: 500;
+    }
+  }
+
+  .familias {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
 }
