--- a/src/pages/Codigo/index.scss
+++ b/src/pages/Codigo/index.scss
@@ -22,6 +22,14 @@
         input {
             all: unset;
             border-bottom: solid 4px #fff;
+            padding: 0px 10px;
+        }
+
+        input:focus {
+            transition: all 0.5s;
+            background-color: #383838;
+            box-shadow: 0 6px 30px #5a5a5a;
+            border-radius: 12px;
         }
 
         button {
