--- a/src/components/Cards/index.scss
+++ b/src/components/Cards/index.scss
@@ -1,4 +1,15 @@
+@font-face {
+    font-family: "instrumentRegular";
+    src: url("../../../public/assets/fonts/InstrumentSerif-Regular.ttf");
+  }
+  
+  @font-face {
+    font-family: "instrumentItalic";
+    src: url("../../../public/assets/fonts/InstrumentSerif-Italic.ttf");
+  }
+
 .Cards {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -7,6 +18,16 @@
 
     img {
         width: 15vw;
+    }
+
+    p {
+        position: absolute;
+        bottom: 50px;
+        font-family: instrumentRegular;
+        text-decoration: none;
+        color: #fff;
+        font-weight: 500;
+        font-size: 2.5rem;
     }
 }
 
